<resources>
    <string name="app_name">FirstApp</string>
    <string name="first_android_app">First Android App</string>
    <string name="checkbox">CheckBox</string>
    <string name="type_some_text">Type some text…</string>
    <string name="magic_button">Magic button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="the_button_is_not_working">(the button is not working now)</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="check_last_updates">Check last updates</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="birthdate">birthdate</string>
    <string name="office_number">office number</string>
    <string name="personal_number">personal number</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>

</resources>